Improving frontend
