# src/main/java/com/uiet/TradingApp/entity/User.java
@@ -1,5 +1,7 @@
 package com.uiet.TradingApp.entity;
 
+import com.fasterxml.jackson.annotation.JsonManagedReference;
+import jakarta.persistence.CascadeType;
 import jakarta.persistence.Column;
 import jakarta.persistence.ElementCollection;
 import jakarta.persistence.Entity;
@@ -7,6 +9,7 @@ import jakarta.persistence.FetchType;
 import jakarta.persistence.GeneratedValue;
 import jakarta.persistence.GenerationType;
 import jakarta.persistence.Id;
+import jakarta.persistence.OneToMany;
 import jakarta.persistence.Table;
 import java.math.BigDecimal;
 import java.time.LocalDateTime;
@@ -39,4 +42,7 @@ public class User {
   @Column(nullable = false, columnDefinition = "boolean default false")
   private boolean isTotpEnabled;
   private String secret;
+  @OneToMany(mappedBy = "user", cascade = CascadeType.ALL)
+  @JsonManagedReference(value = "user-portfolio")
+  private List<Portfolio> portfolio;
 }
